# sheepsheadai

./: .env.example  .gitignore  Exit_Arms_202606.md  ISMCTS_Overview_And_Roadmap.md  ISMCTS_Teacher_Refactor_Plan.md  Population_Grounded_Teacher_Plan.md  README.md  Sheepshead.md  analyze_card_embeddings.py  analyze_defender_trump_leads.py  architectures.py  compare_partner_defender_leads.py  config.py  critic_calibration.py  docker-compose.prod.yml  docker-compose.yml  dqn.py  encoder.py  exploiter.py  ismcts.py  keras_dqn.py  league.py  model.py  model_comparison.py  oracle.py  pfsp.py  pfsp_runtime.py  play.py  ppo.py  pyproject.toml  requirements.in  requirements.txt  scripted_agent.py  sheepshead.py  state_encoder.py  test_callable_cards.py  test_ismcts_exit_regression.py  test_model_picking.py  tournament_eval.py  train.py  (+13 more)
analysis/: ablation_report.py  aggregate_ablation.py  analyze_card_embeddings.py  analyze_defender_trump_leads.py  build_panel_matrix.py  capture_arch_goldens.py  compare_partner_defender_leads.py  counterfactual_trump_leads.py  critic_calibration.py  league_progress_eval.py  model_comparison.py  model_picking_report.py  policy_kl_compare.py  rigorous_eval.py  run_ablation_matrix.py  run_extended_league.py  scan_defender_trump_leads.py  scripted_probe.py  targeted_trump_lead_search.py  tournament_eval.py  trump_lead_probe.py  tune_deploy_search.py
app/: docker-compose.prod.yml
architectures/: encoders.py  registry.py
db/: .gmrc  package-lock.json
deploy/: .env.prod.example
design/: Hero Tuning.html  Landmark Variations.html  Sheepshead AI Prototype.html  Sheepshead AI Redesign.html  app.jsx  components.jsx  hero-tune.jsx  landmark-variants.jsx  page-home.jsx  page-table-phases.jsx  page-table.jsx  page-waiting.jsx  tokens.css
docs/: database-migrations.md  deploy.md
notebooks/: Architecture_Ablation_202607.md  Blitz_Crack_Recrack_Plan_202607.md  Convention_Erosion_202607.md  Convention_Optimality_202607.md  Deploy_Search_202606.md  Evaluation_Harnesses_202607.md  Exit_Arms_202606.md  Exploiter_League_Plan_202606.md  Extended_League_202607.md  ISMCTS_Overview_And_Roadmap.md  ISMCTS_Teacher_Refactor_Plan.md  League_Run_Review_202607.md  Learning_System_Redesign_202607.md  Population_Grounded_Teacher_Plan.md  Repo_Reorg_Plan_202607.md  Search_Readout_Comparison_202607.md  Throughput_Profiling_Notes.md  UIRedesignImplementationPlan_202606.md  Validation_Baseline_Notes.md  WebServerUpdatePlan_202604.md  Web_Server_Update_Instructions_202604.md  cursor_improving_point_tracking.md  defender_trump_lead_investigation.md  panel_a_strength_matrix.csv  panel_a_strength_matrix_called.csv  (+1 more)
(+499 files in other folders)
