[project]
name = "sheepshead-ai"
version = "0.1.0"
description = "Reinforcement Learning agent for the trick-taking card game Sheepshead."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openskill>=6.1.3",
    "pip-tools>=7.4.1",
    "scipy>=1.16.0",
    "torch>=2.7.1",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "websockets>=11.0.0",
]
