[project]
name = "sheepshead-ai"
version = "0.1.0"
description = "Reinforcement Learning agent for the trick-taking card game Sheepshead."
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openskill>=6.2.0",
    "pip-tools>=7.5.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "websockets>=16.0",
]
