[project]
name = "sheepshead-ai"
version = "0.1.0"
description = "Reinforcement Learning agent for the trick-taking card game Sheepshead."
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openskill>=6.2.0",
    "pip-tools>=7.5.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
]

[project.scripts]
train-selfplay = "sheepshead.training.train_selfplay_ppo:main"
train-league = "sheepshead.training.train_league_ppo:main"
extended-league = "sheepshead.training.run_extended_league:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sheepshead", "app/server"]

[project.optional-dependencies]
server = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "websockets>=16.0",
    "asyncpg>=0.30.0",
    "slowapi>=0.1.9",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Linux (CI, Docker) gets CPU-only torch wheels: the CUDA distribution is
# several GB and useless on those hosts. macOS wheels are CPU-only already.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
